fix spacings for few modals

--- a/FullNode.UI/src/scss/_modal.scss
+++ b/FullNode.UI/src/scss/_modal.scss
@@ -52,8 +52,8 @@
   background-color: $modal-content-bg;
   border: 1px solid #158BCF;
   box-shadow: 0 5px 20px #BDDDF2;
-  padding: 2rem;
-  margin: 2rem;
+  padding: 1rem;
+  margin: 0;
   position: relative;
   display: flex;
   flex-direction: column;
